css/style.css
/* ... */
.textarea {
    width: 100%;
    padding: 12px 20px;
    min-height: 45px;
    min-height: 100px;
    color: #000000;
    box-sizing: border-box;
    border: 1px solid #e5e5e5;
    margin: 8px 0;
    background-color: #ffffff;
    border-radius: 0px;
   font-family:'GraphikWeb-Regular','Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.buttonexplore {
background: linear-gradient(158deg, #16A085 44%, #2ECC71 85%);
    border: none;
    border-radius: 3px;
    color: #ffffff;
    font-weight: 600;
    letter-spacing: 0.8px;
    padding: 8px 10px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 18px;
    margin-top: 10px;
    cursor: pointer;
     font-family:'GraphikWeb-Medium','Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.formed-group
{
    display:flex;
}
.navbar-nav>li>a:hover{ 
        color: #1d2b36;
   background-color:transparent;
}
.banner
{
    background-repeat: no-repeat;
    background-size:cover;
    min-height:700px; 
    background-color:#e2e3e9;
}
.banner video {
    position: absolute;
    left: 0px;
    top: 0;
    width: 100%;
    height: 700px;
    object-fit: cover;
}



.cr-mask
{
    opacity: 1;
     background-color:#5c33f6;
       margin-top:-30px;
}
.mc-features {
    padding: 10px 30px;
    max-width: 1140px !important;
    width: 100%;
    margin: 0 auto;
    position: relative;
    bottom: -60px;
    background-color: #ffffff;
    border:1px solid #eeeeee;
    box-shadow: 0 5px 30px 0 rgba(147,161,176,.25);
}
.mc-br-rght
{
        border-right: 1px solid #eee;
}
.mc-ft-pad h3
{
    font-size:20px;
    padding-left:60px;
        margin-top: 12px;
    text-align:left;
    font-family:'GraphikWeb-Medium','Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.mc-ft-icon {
    margin: 0px 0px 0px;
    width: 45px;
  position: absolute;
    height: 45px;
}
.mc-faq-bar {
    max-width:700px;
    width:100%;
    margin: 10px auto;
    padding: 10px 15px;
    border: 1px solid #f4f4f4;
    border-radius: 6px;
    font-family:'GraphikWeb-Regular','Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    box-shadow: 0 4px 4px rgba(0, 0, 0, .06);
}
.mc-faq-bar h3
{
    text-align:center;
      font-family:'GraphikWeb-SemiBold','Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.mc-faq h4 {
  text-align:left;
     font-family:'GraphikWeb-SemiBold','Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.mc-comp-table {
    border: 1px solid #f4f4f4;
     font-family:'GraphikWeb-Regular','Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.mc-comp-table td {
    padding: 10px;
    border: 1px solid #f4f4f4;
    color: #656565;
    font-size: 12px;
    letter-spacing: 0.3px;
    font-weight: 400;
    font-family: 'GraphikWeb-Regular', sans-serif;
}

.mc-comp-table .gt-head {
    background-color: #CDDC39;
    font-weight: 600;
    color: #000000;
}
.ad-links
{
    list-style-type:none;
    padding:0;
    margin:0;
}
.ad-links a
{
    padding:0px 5px;
    color:#000000;
    text-decoration:none;
}
.mc-faq h3
{
    text-align:center;
    font-family:'GraphikWeb-SemiBold','Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
    font-size:25px;
}
.mc-faq-bar b
{
     font-family:'GraphikWeb-Medium','Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
}
.mc-br-rght p
{
font-size:13px;
max-width:250px;
margin:0 auto;
color:#405261;
text-align:center;
}

.navbar-brand:hover
{
    color:#27BD78;
}
.top{
    margin-top:10px;
}
.margintop
{
padding-top:130px;
}
.font
{
   font-family:'GraphikWeb-regular','Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    text-align:center;
    font-size:20px;
    font-weight:400;
    padding:10px;
    letter-spacing:0.6px;
    color:#000;
    text-shadow: 3px 0 4px #ffffff;
}
.text
{
      font-family:'GraphikWeb-regular','Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    text-align:center;
    font-size:18px;
    font-weight:400;
    padding:10px;
    letter-spacing:0.6px;
    color:#000;
}
.flashcard
{
    margin-top:30px;
}

.card:hover {
box-shadow: 0 1px 1px 0 rgba(90,122,190,.1), 0 10px 20px 0 rgba(90,122,190,.2);
    border: 1px solid rgba(90,122,190,.08);
}
.green
{
    background-color:#f8f8f8;
}
.green:hover{
    cursor: pointer;
    margin-top:10px;
}
.pad
{
    margin-top:20px;
}
.card {
   box-shadow: 0 1px 1px 0 rgba(90,122,190,.1), 0 10px 20px 0 rgba(90,122,190,.2);
    border: 1px solid rgba(90,122,190,.08);
    transition: 0.3s;
    padding:30px;
        margin-left: 0px;
    margin-top:40px;
        margin-bottom: 20px;
    width: 100%;
}

.quote-card
{
      font-family:'GraphikWeb-regular','Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-shadow: 0 1px 1px 0 rgba(90,122,190,.1), 0 10px 20px 0 rgba(90,122,190,.2);
    border: 1px solid rgba(90,122,190,.08);
    transition: 0.3s;
    padding:10px;
    position: relative;
     background-color: #ffffff;
        margin-left: 0px;
    
    width: 100%;  
}
.top-margin
{
    margin-top:30px;
}

.sticky-card
{
    position:sticky;
    top:0px;
    z-index:10;
  background-color: #ffffff;
}
.sticky-bottom
{
      position: fixed;
            left: 0;
            bottom: 0;
            width: 100%;
            background-color: #f4f4f4;
            font-family: 'Rubik', sans-serif;
            color: black;
            text-align: center;
}
.popover-wrapper {
    max-width:120px;
    width:100%;
    position: relative;
    display: inline-block;
}
/* ... */

